# HDBSCAN-Presentation

./: .gitignore  Presentation-ManimEditor.ipynb  Presentation.ipynb  pyproject.toml  ref.bib
data/: DS2.csv  gaussian100b.csv
notebooks/: Comparing Clustering Algorithms.ipynb  Example.py  HDBSCAN.ipynb  How HDBSCAN Works.ipynb  Testing.ipynb
